--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -5,11 +5,11 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Company</th>
-      <th>Job title</th>
+      <th><%= sortable "name" %></th>
+      <th><%= sortable "last_name" %></th>
+      <th><%= sortable "email" %></th>
+      <th><%= sortable "company" %></th>
+      <th><%= sortable "job_title" %></th>
       <th>Phone</th>
       <th>Website</th>
       <th colspan="3"></th>
